test/functional/Sema/bad_function_call_missing.glu
//
// RUN: not gluc %s 2>&1 | FileCheck %s
//

func myFunc(a: Int, b: Int, c: Int = 10) -> Int {
    return a + b + c;
}

func main() -> Int {
    // CHECK: bad_function_call_missing.glu:11:12: error: Cannot convert ? to (?) -> ?
    return myFunc(1);
}
